--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name=viewport content="width=device-width, initial-scale=1"><title>ai+art.berlin</title><style>body{background-color:black}p{font-family:"courier";font-size:9vw;color:white;text-align:center}</style></head><body><p>ai+art/<br>/berlin</p></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name=viewport content="width=device-width, initial-scale=1"><title>aiplusart.berlin</title>
+	<style>
+		h1{font-family:"courier";font-size:9vw;font-weight:normal;text-align:center}
+		h3{font-family:"courier";font-size:1.5vw;font-weight:normal;text-align:center}
+		p{font-family:"courier";font-size:20px;text-align:justify}
+		a:link{color:black;}a:visited{color:black;}a:hover{color:grey;}
+		li{font-family:"courier";font-size:20px;text-align:left}
+	</style>
+</head>
+<body>
+	<h1>ai+art/<br>/berlin</h1><br>
+	<h3>Artificial Intelligence meets Art in Berlin.</h3><br><br><br><br><br>
+	<h3><a href="#about">&#8883;A</a>bout&nbsp;&nbsp;&nbsp;<a href="#events">&#8883;E</a>vents&nbsp;&nbsp;&nbsp;<a href="#resources">&#8883;R</a>esources&nbsp;&nbsp;&nbsp;<a href="#community">&#8883;C</a>ommunity</h3><br><br>
+	<!-- <hr><p><a name="about"><em>About</em></a></p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Justo donec enim diam vulputate ut pharetra. At consectetur lorem donec massa sapien. Vulputate enim nulla aliquet porttitor lacus. Vulputate eu scelerisque felis imperdiet proin fermentum leo vel. Facilisi nullam vehicula ipsum a arcu cursus. A condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Fermentum odio eu feugiat pretium nibh ipsum consequat nisl. In massa tempor nec feugiat nisl pretium fusce id velit. Vulputate ut pharetra sit amet.</p>
+	<p>This is where the initiative <a href="#">ai+art//berlin</a> comes in.</p>
+	<p>Aliquam ut porttitor leo a. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget. Molestie a iaculis at erat pellentesque adipiscing commodo elit at. Eu turpis egestas pretium aenean. Bibendum est ultricies integer quis auctor elit sed. Mollis aliquam ut porttitor leo a diam sollicitudin tempor id. Quam vulputate dignissim suspendisse in est ante in nibh. Phasellus vestibulum lorem sed risus. Lectus magna fringilla urna porttitor rhoncus dolor purus. Eu volutpat odio facilisis mauris sit amet massa vitae. Lectus sit amet est placerat in egestas.</p><hr>
+	<p><a name="events"><em>Events</em></a>
+	<ul>
+		<li>Meetup</li>
+		<li>Workshop</li>
+		<li>Hackathon</li>
+	</ul></p><hr>
+	<p><a name="resources"><em>Resources</em></a></p>
+	<p>Coming soon.</p><hr>
+	<p><a name="community"><em>Community</em></a>
+	<ul>
+		<li><a href="https://github.com/aiplusartberlin" target="_blank">Code</a></li>
+		<li><a href="https://gitter.im/aiplusartberlin/community" target="_blank">Chat</a></li>
+	</ul></p><hr> -->
+</body>
+</html>
