--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
 	<h1>ai+art/<br>/berlin</h1><br>
 	<h3>Artificial Intelligence meets Art in Berlin.</h3><br>
-	<p><a href="about.html">about</a>&nbsp;&nbsp;&nbsp;<a href="news.html">news</a>&nbsp;&nbsp;&nbsp;<a href="events.html">events</a>&nbsp;&nbsp;&nbsp;<a href="resources.html">resources</a></p>
+	<p><a href="https://aiplusart.berlin/about.html">about</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/news.html">news</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/events.html">events</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/resources.html">resources</a></p>
 </body>
 </html>
