--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 		p{font-family:"courier";font-size:20px;text-align:center}
 		a:link{color:black;}a:visited{color:black;}a:hover{color:grey;}
 		li{font-family:"courier";font-size:20px;text-align:left}
+		body{width:800px;margin-left:auto;margin-right:auto;}
 	</style>
 </head>
 <body>
-	<h1>ai+art/<br>/berlin</h1><br>
+	<h1>ai+art/<br>/berlin</h1>
 	<h3>Artificial Intelligence meets Art in Berlin.</h3><br>
-	<p><a href="https://aiplusart.berlin/about.html">about</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/news.html">news</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/events.html">events</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/resources.html">resources</a></p>
+	<p><a href="https://aiplusart.berlin/about.html">about</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/news.html">news</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/resources.html">resources</a></p>
 </body>
 </html>
