--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<h1>ai+art/<br>/berlin</h1>
-	<p><blockquote>The collective ai+art//berlin has as its central goal the exchange and transfer of experiences and competencies in the fields of artificial intelligence and machine learning (AI) from and to artists and culture professionals from Berlin.</blockquote></p> 
-	<p><blockquote>Founded amidst a global pandemic in 2021 by <a href="https://cneud.net">Clemens Neudecker</a> and <a href="http://benquint.com/">Benjamin Quint</a> in Berlin, ...</blockquote></p><br>
-	<p><a href="https://aiplusart.berlin/">home</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/news.html">news</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/resources.html">resources</a></p>
+	<p><blockquote><a href="https://aiplusart.berlin/">ai+art//berlin</a> has as its central aim the exchange and transfer of experiences and competencies in the fields of artificial intelligence and machine learning (AI) from and to artists and culture professionals from Berlin.</blockquote></p> 
+	<!--<p><blockquote>Founded amidst a global pandemic in 2021 by <a href="https://cneud.net">Clemens Neudecker</a> and <a href="http://benquint.com/">Benjamin Quint</a> in Berlin, ...</blockquote></p><br>-->
+	<!--<p><a href="https://aiplusart.berlin/">home</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/news.html">news</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/resources.html">resources</a></p>-->
 </body>
 </html>
