--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<h1>ai+art/<br>/berlin</h1>
 	<h3>Artificial Intelligence meets Art in Berlin.</h3><br>
-	<p><a href="https://aiplusart.berlin/about.html">about</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/news.html">news</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/resources.html">resources</a></p>
+	<p><a href="https://aiplusart.berlin/about.html">about</a></p>
+	<!--&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/news.html">news</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/resources.html">resources</a></p>-->
 </body>
 </html>
