--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 	</style>
 </head>
 <body>
-	<h1>ai+art/<br>/berlin</h1>
-	<h3>Artificial Intelligence meets Art in Berlin.</h3><br>
-	<p><a href="https://aiplusart.berlin/about.html">about</a></p>
-	<!--&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/news.html">news</a>&nbsp;&nbsp;&nbsp;<a href="https://aiplusart.berlin/resources.html">resources</a></p>-->
+	<h1><a href="https://aiplusart.berlin/about.html">ai+art/<br>/berlin</h1></a>
 </body>
 </html>
