--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	</style>
 </head>
 <body>
-	<h1><a href="https://aiplusart.berlin/about.html">ai+art/<br>/berlin</h1></a>
+	<h1><a href="https://aiplusart.berlin/about.html">ai+art.<br>berlin</h1></a>
 </body>
 </html>
